[gd_scene load_steps=5 format=2]

[ext_resource path="res://XanhMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 2 )

[node name="LiveScore" type="Label" parent="."]
visible = false
margin_left = 21.0
margin_top = 16.0
margin_right = 72.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 1, 0.105882, 0.105882, 1 )
text = "Score: 0"

[node name="Retry" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.737255, 0.737255, 0.737255, 0.509804 )

[node name="PlayButton" type="Button" parent="Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = 42.0
margin_right = 31.0
margin_bottom = 73.0
text = "Start"

[node name="FinalScore" type="Label" parent="Retry"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -12.5
margin_right = 70.0
margin_bottom = 12.5
text = "Final Score: 0"

[connection signal="pressed" from="Retry/PlayButton" to="." method="_on_Button_pressed"]
